--- a/style.css
+++ b/style.css
@@ -11,14 +11,13 @@ body {
   flex-direction: column;
   margin: auto;
   text-align: center;
-  gap: 2rem;
-  padding: 1rem 0;
 }
 
 main {
   display: flex;
   gap: 2rem;
   width: 60%;
+  margin-top: 1rem;
 }
 /* *********************FORM KISMI ******************/
 form {
@@ -80,12 +79,14 @@ select {
 /****************** BOX KISMII ******************/
 .box {
   width: 400px;
+  height: 450px;
   padding: 1rem;
   display: flex;
   flex-direction: column;
   gap: 1rem;
   background-color: #eeeeee;
   border-radius: 15px;
+
 }
 
 .box .resim {
@@ -133,7 +134,7 @@ form h1 {
   border-top: 1px solid rgb(150, 136, 136);
 }
 .ürün {
-  margin-top: 5rem;
+  margin-top: 1.5rem;
 }
 img {
   border-radius: 10px;
@@ -142,13 +143,21 @@ img {
 
 span {
   text-decoration: line-through;
-
   font-size: 14px;
 }
 strong {
   color: orange;
 }
-
+#btn{
+  padding: 1rem 1rem;
+  border-radius: 15px;
+  background: orange;
+  color: white;
+  border: transparent;
+  font-size: 1rem;
+  font-weight: 600;
+  margin-top: 0;
+}
 
 @media (max-width: 900px) {
   main {
