--- a/style.css
+++ b/style.css
@@ -157,12 +157,18 @@ strong {
   font-size: 1rem;
   font-weight: 600;
   margin-top: 0;
+
+  
   
 }
 button{
   cursor: pointer;
 }
-
+#btn:hover{
+  /* transform: scale(0.9); */
+  box-shadow:0px 0px 10px 5px rgb(105, 100, 100);
+  transition: 0.5s;
+}
 @media (max-width: 900px) {
   main {
     flex-direction: column;
