--- a/style.css
+++ b/style.css
@@ -15,7 +15,6 @@ body {
 
 main {
   display: flex;
-  gap: 2rem;
   width: 60%;
   margin-top: 1rem;
 }
@@ -28,6 +27,7 @@ form {
   gap: 3rem;
   text-align: left;
 }
+
 
 .doldur {
   margin: 10px 0;
@@ -54,7 +54,7 @@ label {
 }
 
 input:not(#olmaz) {
-  width: 100%;
+  width: 90%;
   padding: 0.5rem;
   border-radius: 5px;
   padding-left: 2rem;
@@ -78,8 +78,7 @@ select {
 }
 /****************** BOX KISMII ******************/
 .box {
-  width: 400px;
-  height: 450px;
+  height: 65vh;
   padding: 1rem;
   display: flex;
   flex-direction: column;
@@ -96,9 +95,8 @@ select {
   width: 100%;
 }
 .box .resim .yan {
-  padding: 10px 0;
-  width: 100%;
-  height: 125px;
+  padding: 0.5rem 0;
+  height: 8rem;
   display: flex;
   flex-direction: column;
   position: relative;
@@ -165,22 +163,32 @@ button{
   cursor: pointer;
 }
 #btn:hover{
-  /* transform: scale(0.9); */
   box-shadow:0px 0px 10px 5px rgb(105, 100, 100);
   transition: 0.5s;
 }
 @media (max-width: 900px) {
   main {
     flex-direction: column;
-    width: 100%;
+    width: 100vw;
     align-items: center;
   }
   .box {
     order: 1;
+    min-width: 300px;
   }
   form {
     order: 2;
+    text-align: center;
   }
+  .ulke {
+  display:block;
+  width: 90%;
+}
+.posta {
+  display: block;
+  width: 100%;
+}
+
 }
 
 
